<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBg">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/security"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pink_card"
        app:cardElevation="16dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/red"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/text_SOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="24dp"
        android:text="@string/sos"
        android:textColor="#fff"
        android:textSize="@dimen/dimen_40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@+id/pink_card" />

    <ImageView
        android:contentDescription="@string/desc_sos_img"
        android:id="@+id/sos_img"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:elevation="24dp"
        android:src="@drawable/ic_sos"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card" />

    <TextView
        android:id="@+id/sos_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:elevation="24dp"
        android:text="@string/in_case_of_emergency_keep_telling_family_members_to_contact_me"
        android:textColor="#fff"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/sos_img"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toBottomOf="@+id/text_SOS"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/aqua_card"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        app:cardElevation="16dp"
        app:cardBackgroundColor="@color/aqua"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/pink_card" />

    <TextView
        android:id="@+id/text_GUARD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="24dp"
        android:text="@string/guard"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/aqua_card"
        app:layout_constraintTop_toTopOf="@+id/aqua_card" />

    <ImageView
        android:contentDescription="@string/guard_img"
        android:id="@+id/guard_img"
        android:layout_width="@dimen/dimen_112dp"
        android:layout_height="@dimen/dimen_112dp"
        android:elevation="@dimen/dimen_24dp"
        android:src="@drawable/ic_security_guard"
        app:layout_constraintBottom_toBottomOf="@id/aqua_card"
        app:layout_constraintEnd_toEndOf="@id/aqua_card"
        app:layout_constraintTop_toTopOf="@id/aqua_card" />

    <TextView
        android:id="@+id/guard_msg"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:elevation="@dimen/dimen_24dp"
        android:text="@string/open_when_you_are_on_a_potentially_dangerous_journey"
        android:textColor="#fff"
        android:textSize="@dimen/dimen_24sp"
        app:layout_constraintEnd_toStartOf="@id/guard_img"
        app:layout_constraintStart_toStartOf="@id/aqua_card"
        app:layout_constraintTop_toBottomOf="@+id/text_GUARD" />


</androidx.constraintlayout.widget.ConstraintLayout>