<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card1"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="@dimen/dimen_24dp"
        app:cardCornerRadius="@dimen/radius_dimen_24dp"
        android:layout_margin="@dimen/dimen_16dp"
        android:elevation="@dimen/dimen_16dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_140dp"
        tools:ignore="UnknownIdInLayout" />

    <ImageView
        android:id="@+id/user_image"
        app:layout_constraintTop_toTopOf="@id/card1"
        app:layout_constraintStart_toStartOf="@id/card1"
        android:src="@drawable/ic_man"
        android:elevation="32dp"
        android:layout_margin="16dp"
        android:layout_width="70dp"
        android:layout_height="70dp" />

    <TextView
        android:id="@+id/user_name"
        android:text=" "
        android:layout_marginStart="@dimen/dimen_16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:elevation="@dimen/dimen_24dp"
        app:layout_constraintTop_toTopOf="@id/user_image"
        app:layout_constraintStart_toEndOf="@id/user_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/curr_time"
        app:layout_constraintTop_toTopOf="@id/user_image"
        android:text=""
        android:layout_marginEnd="@dimen/dimen_16sp"
        android:elevation="@dimen/dimen_24dp"
        android:textStyle="bold"
        android:textColor="@color/darkGrey"
        app:layout_constraintEnd_toEndOf="@id/card1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/card1_location"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        android:src="@drawable/ic_yellow_location"
        android:elevation="@dimen/dimen_24dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        app:layout_constraintStart_toEndOf="@id/user_image"
        android:layout_width="20dp"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/user_address"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintStart_toEndOf="@id/card1_location"
        app:layout_constraintEnd_toEndOf="@id/card1"
        android:elevation="@dimen/dimen_24dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/lightText"
        android:text=" "
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/ic_battery"
        android:elevation="@dimen/dimen_24dp"
        android:layout_margin="@dimen/dimen_16dp"
        android:src="@drawable/ic_smartphone_charger"
        app:layout_constraintTop_toBottomOf="@id/user_image"
        app:layout_constraintStart_toStartOf="@id/user_image"
        app:layout_constraintEnd_toEndOf="@id/user_image"
        android:layout_width="20dp"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/battery_text"
        app:layout_constraintStart_toEndOf="@id/ic_battery"
        app:layout_constraintTop_toBottomOf="@id/user_image"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginStart="@dimen/dimen_4dp"
        android:text="@string/_90"
        android:textSize="@dimen/dimen_16sp"
        android:textStyle="bold"
        android:elevation="@dimen/dimen_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/ic_send"
        android:elevation="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_16sp"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:src="@drawable/ic_send"
        app:layout_constraintTop_toBottomOf="@id/user_image"
        app:layout_constraintStart_toEndOf="@id/battery_text"
        android:layout_width="20dp"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/send_text"
        app:layout_constraintStart_toEndOf="@id/ic_send"
        app:layout_constraintTop_toBottomOf="@id/user_image"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginStart="@dimen/dimen_4dp"
        android:text="@string/_224m"
        android:textSize="@dimen/dimen_16sp"
        android:textStyle="bold"
        android:elevation="@dimen/dimen_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/ic_wifi"
        android:elevation="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_16sp"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:src="@drawable/ic_wifi_signal"
        app:layout_constraintTop_toBottomOf="@id/user_image"
        app:layout_constraintStart_toEndOf="@id/send_text"
        android:layout_width="20dp"
        android:layout_height="20dp" />

    <TextView
        app:layout_constraintStart_toEndOf="@id/ic_wifi"
        app:layout_constraintTop_toBottomOf="@id/user_image"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginStart="@dimen/dimen_4dp"
        android:elevation="@dimen/dimen_24dp"
        android:text="@string/wifi"
        android:textSize="@dimen/dimen_16sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:src="@drawable/ic_call"
        app:layout_constraintEnd_toEndOf="@id/card1"
        app:layout_constraintTop_toBottomOf="@id/user_image"
        android:layout_margin="@dimen/dimen_16sp"
        android:elevation="@dimen/dimen_24dp"
        android:layout_width="20dp"
        android:layout_height="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>